# online_library_compose

./: README.md  main.py  parse_tululu.py  pyproject.toml  results.json  template.html
media/: results.json
pages/: index1.html  index2.html  index3.html  index4.html  index5.html  index6.html
