[tool.poetry]
name = "online-library-compose"
version = "0.1.0"
description = ""
authors = ["Sangdak <sh.doppelganger@gmail.com>"]
readme = "README.md"
packages = [{include = "online_library_compose"}]

[tool.poetry.dependencies]
python = "^3.11"
jinja2 = "^3.1.2"
pathvalidate = "^3.0.0"
bs4 = "^0.0.1"
requests = "^2.31.0"
lxml = "^4.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
